--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -46,7 +46,7 @@ header a:hover {
 }
 
 main {
-    width: auto;
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -76,18 +76,43 @@ main {
 }
 
 .tecnologias {
+    width: 100%;
     color: var(--color-white);
     margin-top: 40px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tecnologias #javascript {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.tecnologias #html {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.tecnologias #css {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
 }
 
 .tecnologias img {
     width: 50px;
     height: 50px;
-}
+}    
 
 .tecnologias li {
     margin: 10px;
+    list-style: none;
 }
 
 footer {
@@ -102,8 +127,8 @@ footer {
 }
 
 footer img {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     margin: 0 30px;
 }
 
