--- a/styles/content.css
+++ b/styles/content.css
@@ -12,13 +12,15 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
     background-color: var(--color-blackFundo);
 }
 
 header {
     width: 100%;
     height: 100px;
-    color: var(--color-blackHeader);
+    background-color: var(--color-blackHeader);
 }
 
 header h1 {
@@ -26,14 +28,15 @@ header h1 {
     font-family: sans-serif;
     font-weight: bold;
     text-align: center;
-    margin-top: 30px;
+    padding-top: 25px;
 }
 
 .cards {
     background-color: var(--color-blackHeader);
     width: 950px;
-    height: auto;   
-    justify-content: center;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 100px;  
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
@@ -57,14 +60,29 @@ header h1 {
     margin-top: 5px;
 }
 
-.card #card-author {
-    text-align: center;
-    font-size: 15px;
-    font-family: sans-serif;
-}
-
-.card #card-time {
+.card #card-content {
     display: flex;
     flex-direction: row;
-    align-items: center;    
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    
+}
+
+.card #card-content span {
+    margin-left: 15px;
+}
+
+.card #card-content p {
+    margin-left: 5px;
+}
+
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
 }
