--- a/styles/content.css
+++ b/styles/content.css
@@ -85,4 +85,57 @@ header h1 {
     height: 100%;
     position: fixed;
     top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    background-color: white;
+    width: 90%;
+    height: 90%;
+    margin: 5vh auto;
+    position: relative;
+    align-items: flex-end;
+}
+
+.modal.maximized {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.modal .close-modal {
+    color: black;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    cursor: pointer;
+}
+
+.modal .close-modal i {
+    font-size: 20px;
+}
+
+.modal .maximize-modal {
+    color: black;
+    position: absolute;
+    right: 35px;
+    top: 8px;
+    cursor: pointer;
+}
+
+.modal .maximize-modal i {
+    font-size: 20px;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-content iframe {
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    top: 5%;
 }
