--- a/Back-end/views/layout.njk
+++ b/Back-end/views/layout.njk
@@ -11,20 +11,8 @@
     <title>Desafio 2-1</title>
 </head>
 <body>
-    <header>
-        <div id="image">
-            <img src="/image/logo_rocketseat.png" alt="Logo">
-        </div>
 
-        <div class="links">
-            <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
-            <a href="mailto:oi@rocketseat.com.br">Email</a>
-            <a href="tel:+5547992078767">Telefone</a>
-            <a href="/">Sobre</a>
-        </div>
-    </header>
-
-
+    {% block content %} {% endblock %}
 
 </body>
 </html>
